@@ -3,6 +3,10 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- Add support for dns forward wildcard, use * as hostname
+- Add SixXS interface to traffic Graph
+
+---
 - Update text for WAN RA, to suggest this is normally off
 - Fix ipv6 link local filter rule, missing newline
 - Fix dhcpv4 having ipv6 address inserted in dhcpd.conf
